src/test/deca/codegen/invalid/resultats/divint0-ima.res
Erreur : Division par 0.
